# xiaoxinChatAI

./: .gitignore  README.md  cache  content_filter.py  main.py  memory.py  pyproject.toml  start_web.bat  tools.py  web_config.json  web_ui.py  web_ui.spec
.git_temp/: .gitignore
.streamlit/: config.toml
clawpy/: __init__.py  auth.py  client.py  core.py  types.py
core/: __init__.py  config.py  handler.py  prompt.py  session.py  skill.py
memory_data/: long_term_memory.db
xiaoxin_chat_app/: BACKGROUND_SERVICE_ARCH.md  README.md  analyze_output.txt  pubspec.yaml
xiaoxin_chat_app/android/: build.gradle.kts  gradle.properties
xiaoxin_chat_app/android/app/: build.gradle.kts  proguard-rules.pro
xiaoxin_chat_app/ios/Runner/: Info.plist
xiaoxin_chat_app/ios/Runner.xcodeproj/: project.pbxproj
xiaoxin_chat_app/lib/: app_theme.dart  main.dart
xiaoxin_chat_app/lib/core/: bot_service.dart  llm_client.dart  memory_service.dart  skill_loader.dart  skill_storage.dart  skill_storage_native.dart  skill_storage_web.dart  wechat_client.dart
xiaoxin_chat_app/lib/models/: app_config.dart  chat_models.dart
xiaoxin_chat_app/lib/pages/: main_page.dart  onboarding_page.dart  settings_page.dart
xiaoxin_chat_app/lib/providers/: app_provider.dart
xiaoxin_chat_app/lib/services/: api_service.dart
xiaoxin_chat_app/linux/: CMakeLists.txt
xiaoxin_chat_app/test/: advanced_features_test.dart  crypto_utils_test.dart  integration_test.dart  widget_test.dart
xiaoxin_chat_app/web/: index.html  manifest.json
xiaoxin_chat_app/windows/: CMakeLists.txt
(+14 files in other folders)
